dev: Prevent device panel from growing too much

--- a/pkg/webui/console/containers/devices-panel/devices-panel.styl
+++ b/pkg/webui/console/containers/devices-panel/devices-panel.styl
@@ -13,7 +13,9 @@
 // limitations under the License.
 
 .devices-panel
-  height: 31rem
+  min-height: 31rem
+  max-height: 40rem
+  height: 100%
   display: flex
   flex-direction: column
 
